--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="{% static 'assets/themes/limitless/css/colors.css'%}">
     <link href="{% static 'assets/plugins/font-awesome/css/font-awesome.min.css'%}" rel="stylesheet" type="text/css">
     <link href="{% static 'assets/plugins/bootstrap-toastr/toastr.min.css'%}" rel="stylesheet" type="text/css">
-    <link href="{% static 'assets/plugins/bootstrap-touchspin/bootstrap.touchspin.min.css'%}" rel="stylesheet" type="text/css">
+    <link href="{% statidc 'assets/plugins/bootstrap-touchspin/bootstrap.touchspin.min.css'%}" rel="stylesheet" type="text/css">
     <link href="{% static 'assets/plugins/fullcalendar/fullcalendar.css'%}" rel="stylesheet" type="text/css">
     <link href="{% static 'assets/plugins/sweetalert2/sweetalert2.min.css'%}" rel="stylesheet" type="text/css">
     <link href="{% static 'assets/plugins/fancybox/jquery.fancybox.css'%}" rel="stylesheet" type="text/css">
@@ -42,16 +42,16 @@
         document.writeln = function () { };
     </script>
 
-    <script src="{% static 'assets/plugins/jquery/jquery-2.2.3.min.js'%}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
 
     <script src="{% static 'assets/plugins/bootstrap-toastr/toastr.min.js'%}" type="text/javascript"></script>
-    <script src="{% static 'assets/plugins/jqueryui/jquery-ui.min.js'%}" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" type="text/javascript"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
         $.widget.bridge('uibutton', $.ui.button);
     </script>
     <!-- Bootstrap 3.3.6 -->
-    <script src="{% static 'assets/bootstrap/js/bootstrap.min.js'%}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="{% static 'assets/plugins/datepicker/bootstrap-datepicker.min.js'%}" type="text/javascript"></script>
 
 
