--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="{% static 'assets/themes/limitless/css/colors.css'%}">
     <link href="{% static 'assets/plugins/font-awesome/css/font-awesome.min.css'%}" rel="stylesheet" type="text/css">
     <link href="{% static 'assets/plugins/bootstrap-toastr/toastr.min.css'%}" rel="stylesheet" type="text/css">
-    <link href="{% statidc 'assets/plugins/bootstrap-touchspin/bootstrap.touchspin.min.css'%}" rel="stylesheet" type="text/css">
+    <link href="{% static 'assets/plugins/bootstrap-touchspin/bootstrap.touchspin.min.css'%}" rel="stylesheet" type="text/css">
     <link href="{% static 'assets/plugins/fullcalendar/fullcalendar.css'%}" rel="stylesheet" type="text/css">
     <link href="{% static 'assets/plugins/sweetalert2/sweetalert2.min.css'%}" rel="stylesheet" type="text/css">
     <link href="{% static 'assets/plugins/fancybox/jquery.fancybox.css'%}" rel="stylesheet" type="text/css">
@@ -52,7 +52,7 @@
     </script>
     <!-- Bootstrap 3.3.6 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="{% static 'assets/plugins/datepicker/bootstrap-datepicker.min.js'%}" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.0/js/bootstrap-datepicker.min.js" type="text/javascript"></script>
 
 
     <style type="text/css">
