separated client and admin and repayment

--- a/templates/accounts.html
+++ b/templates/accounts.html
@@ -65,7 +65,7 @@
                 <div class="text-center">
                         <div class="icon-object border-slate-300 text-slate-300"><img src="{% static 'assets/themes/limitless/images/1518004921-81-green-stallion-ltd.jpg'%}" class="img-circle" alt="" height="75%" width="80" ></div>
                 </div>
-                <form method="post" action="{% url 'accounts' %}" class="f-login-form">
+                <form method="post" action="{% url 'register' %}" class="f-login-form">
                     {% csrf_token %}
                     <div class="text-center">
                         <h5 class="content-group">
