--- a/templates/loan/stallion_allowee_form.html
+++ b/templates/loan/stallion_allowee_form.html
@@ -36,7 +36,7 @@
 
                                 </div>
                             </div>
-                            <form method="POST" action="" accept-charset="UTF-8" class="form-horizontal" enctype="multipart/form-data"
+                            <form method="POST" action="{% url 'stallion_allowee_loan' user.id  %} " accept-charset="UTF-8" class="form-horizontal" enctype="multipart/form-data"
                                 id="loan_form">
                                 {% csrf_token %}
                                 <div class="panel-body">
