--- a/templates/login.html
+++ b/templates/login.html
@@ -110,7 +110,7 @@
                     </form>
                     <div class="content-divider text-muted form-group"><span>Don't have an account?</span></div>
                     <div class="text-center">
-                        <a href="accounts" class="btn btn-default btn-block content-group legitRipple">Register</a>
+                        <a href="{% url 'register' %}" class="btn btn-default btn-block content-group legitRipple">Register</a>
                     </div>
                 </div>
            
