--- a/templates/loan/data-status=loan_disbursed.html
+++ b/templates/loan/data-status=loan_disbursed.html
@@ -52,34 +52,29 @@
                                             <th>BVN</th>
                                         </tr>
                                     </thead>
-                                    {% for loan in disbursed %}
-                                    {% if loan.loan_approval == True and loan.loan_disbursement == True %}
+                                    {% if disbursed_loans %}
+                                    {% for loan in disbursed_loans %}
+                                    
                                     <tbody>
                                     <tr>
                                         <form action = '' method = 'POST'>
                                      {% csrf_token %}
                                         <td></td>
-                        <td>{{loan.first_name}} {{loan.last_name}}</td>
+                        <td>{{loan.user.first_name}} {{loan.user.last_name}}</td>
                         <td>{{loan.loan_amount}}</td>
                         <td>{{loan.disbursement_date}}</td>
                         <td>{{loan.user_category}}</td>
                         <td>{{loan.package_list}}</td>
-                        <td>{% if user_category == SAE %}
-                        {{loan.monthly_salary}}
-                        {% elif user_category == BO %}
-                            {{loan.monthly_turnover}}
-                         {% else %}
-                            19800
-                            {% endif %}
-                        </td>
+                        <td>{{ loan.monthly_income }}</td>
                         <td>{{loan.bank_name}}</td>
                         <td>{{loan.bvn}}</td>
                                             <input type="hidden" id="package_list" name="pk" value="{{loan.pk}}">
-                                            </form>
+                        </form>
                     </tr>
                                 </tbody>
-                  {% endif %}
+                  
                   {% endfor %}
+                  {% endif %}
                                 </table>
                                 <div class="form-group">
                         <button type="submit" class="btn bg-success btn-block" id="action">Submit
